--- a/packages/nouns-webapp/src/pages/Profile/Profile.module.css
+++ b/packages/nouns-webapp/src/pages/Profile/Profile.module.css
@@ -10,6 +10,11 @@
   font-size: 1.2rem;
 }
 
+.birthday {
+  color: var(--brand-dark-green);
+  font-size: 1.7rem;
+}
+
 p {
   padding-top: 1rem;
 }
