--- a/packages/nouns-webapp/src/components/NounVoteHistory/NounVoteHistory.module.css
+++ b/packages/nouns-webapp/src/components/NounVoteHistory/NounVoteHistory.module.css
@@ -37,3 +37,20 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.bidRow {
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  border-bottom: 1px solid rgba(211, 211, 211, 0.322);
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.bidCollection {
+  display: grid;
+  text-align: start;
+  list-style-type: none;
+  row-gap: 0.5rem;
+  padding: 0;
+}
