--- a/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
@@ -43,7 +43,7 @@ h4 {
   height: 150px;
 }
 .currentBidCol {
-  border-right: 1px solid var(--brand-black);
+  border-right: 1px solid var(--brand-cool-light-text);
 }
 .auctionTimerCol {
   padding-left: 3rem;
