Update winner, bid atm font and color ... fix bug in vertical line thingy

--- a/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
+++ b/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
@@ -3,3 +3,10 @@
   font-weight: bold;
   font-family: 'Londrina Solid';
 }
+
+.section h4 {
+  font-family: 'PT Root UI Bold';
+  font-size: 18px;
+  line-height: 27px;
+  color: var(--brand-cool-light-text);
+}
