--- a/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
@@ -49,6 +49,13 @@ h4 {
   padding-left: 3rem;
 }
 
+.section h4 {
+  font-family: 'PT Root UI Bold';
+  font-size: 18px;
+  line-height: 27px;
+  color: var(--brand-cool-light-text);
+}
+
 @media (max-width: 992px) {
   .wrapper {
     padding: 1rem;
