h2 text on auction page

--- a/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
+++ b/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
@@ -10,6 +10,13 @@
   display: flex;
 }
 
+.timerSection span {
+  font-family: 'PT Root UI Bold';
+  font-weight: bold;
+  font-size: 32px;
+  color: var(--brand-cool-dark-text);
+}
+
 .timerSection {
   margin-right: 0.5rem;
 }
