--- a/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
@@ -56,6 +56,13 @@ h4 {
   color: var(--brand-cool-light-text);
 }
 
+.section h2 {
+  font-family: 'PT Root UI Bold';
+  font-weight: bold;
+  font-size: 32px;
+  color: var(--brand-cool-dark-text);
+}
+
 @media (max-width: 992px) {
   .wrapper {
     padding: 1rem;
