--- a/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
+++ b/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
@@ -1,6 +1,6 @@
 .title {
   margin-bottom: 0.5rem;
-  font-family: 'PT Root UI Bold';
+  font-family: 'PT Root UI';
   font-size: 18px;
   line-height: 27px;
   color: var(--brand-cool-light-text);
