--- a/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
+++ b/packages/nouns-webapp/src/components/CurrentBid/CurrentBid.module.css
@@ -5,7 +5,7 @@
 }
 
 .section h4 {
-  font-family: 'PT Root UI Bold';
+  font-family: 'PT Root UI';
   font-size: 18px;
   line-height: 27px;
   color: var(--brand-cool-light-text);
