get arrow spacing working mobile and desktop ... nounder and non nouder

--- a/packages/nouns-webapp/src/components/AuctionActivityDateHeadline/AuctionActivityDateHeadline.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityDateHeadline/AuctionActivityDateHeadline.module.css
@@ -2,5 +2,10 @@
     font-family: 'PT Root UI Bold';
     font-size: 18px;
     line-height: 27px;
-    color: var(--brand-cool-light-text)
+    color: var(--brand-cool-light-text);
+    margin-top: 0.22rem;
+}
+
+.wrapper {
+    margin-left: 5rem;
 }
