--- a/packages/nouns-webapp/src/components/Winner/Winner.module.css
+++ b/packages/nouns-webapp/src/components/Winner/Winner.module.css
@@ -28,3 +28,27 @@
   font-size: 32px;
   color: var(--brand-cool-dark-text);
 }
+
+@media (max-width: 992px) {
+  .section h4 {
+    font-size: 18px;
+  }
+
+  .section h2 {
+    font-size: 23px;
+  }
+
+  .section {
+    justify-content: space-between;
+  }
+
+  .wrapper {
+    padding-left: .5rem;
+    padding-right: 2rem;
+  }
+
+  .leftCol {
+    padding-left: 0rem;
+  }
+  
+}
