remove vertical line on mobile and change noun id text on mobile

--- a/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
@@ -26,3 +26,9 @@
   font-family: 'Londrina Solid';
   font-size: 72pt;
 }
+
+@media (max-width: 992px) {
+  .wrapper h1 {
+    font-size: 56px;
+  }
+}
