--- a/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/AuctionActivity.module.css
@@ -69,6 +69,10 @@ h4 {
   .auctionTimerCol {
     padding-left: 15px;
   }
+
+  .currentBidCol {
+    border-right: 0px;
+  }
 }
 
 /* Fix Firefox navigation arrow alignment issues */
