--- a/packages/nouns-webapp/src/components/AuctionActivity/BidHistory.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/BidHistory.module.css
@@ -60,9 +60,7 @@
     border-radius: 10px;
   }
 
-  .bidAmount
-  .linkSymbol
-  .bidder {
+  .bidAmount .linkSymbol .bidder {
     font-size: 16px;
   }
 }
