--- a/packages/nouns-webapp/src/components/Winner/Winner.module.css
+++ b/packages/nouns-webapp/src/components/Winner/Winner.module.css
@@ -43,12 +43,11 @@
   }
 
   .wrapper {
-    padding-left: .5rem;
+    padding-left: 0.5rem;
     padding-right: 2rem;
   }
 
   .leftCol {
     padding-left: 0rem;
   }
-  
 }
