--- a/packages/nouns-webapp/src/components/AuctionNavigation/AuctionNavigation.module.css
+++ b/packages/nouns-webapp/src/components/AuctionNavigation/AuctionNavigation.module.css
@@ -2,12 +2,11 @@
   position: absolute;
 }
 
-.leftArrow {
+.leftArrowCool {
   display: inline-block;
   width: 2rem;
   height: 2rem;
   border: none;
-  background-color: #6db3f2;
   background-size: contain;
   background-repeat: no-repeat;
   font-size: large;
@@ -16,7 +15,8 @@
   background-color: var(--brand-cool-accent);
   font-weight: bold;
 }
-.rightArrow {
+
+.rightArrowCool {
   margin-left: 0.3rem;
   display: inline-block;
   width: 2rem;
@@ -31,19 +31,53 @@
   font-weight: bold;
 }
 
+.leftArrowWarm {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-size: large;
+  border-radius: 50%;
+  color: var(--brand-warm-dark-text);
+  background-color: var(--brand-warm-accent);
+  font-weight: bold;
+}
+
+.rightArrowWarm {
+  margin-left: 0.3rem;
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-size: large;
+  color: var(--brand-warm-dark-text);
+  background-color: var(--brand-warm-accent);
+  border-radius: 50%;
+  font-weight: bold;
+}
+
 /* Disable hover on mobile because it was leading to
 buttons looking disabled when they were not */
 @media (min-width: 992px) {
-  .leftArrow:hover,
-  .rightArrow:hover {
+  .leftArrowWarm:hover,
+  .leftArrowCool:hover,
+  .rightArrowWarm:hover,
+  .rightArrowCool:hover {
     opacity: 0.9;
     background-color: var(--brand-gray-hover);
   }
 }
 
-.leftArrow:disabled,
-.rightArrow:disabled {
+.leftArrowWarm:disabled,
+.leftArrowCool:disabled,
+.rightArrowWarm:disabled,
+.rightArrowCool:disabled {
   opacity: 0.5;
+  cursor: not-allowed;
 }
 
 @-moz-document url-prefix() {
