--- a/packages/nouns-webapp/src/components/NounInfoRowHolder/NounInfoRowHolder.module.css
+++ b/packages/nouns-webapp/src/components/NounInfoRowHolder/NounInfoRowHolder.module.css
@@ -2,6 +2,7 @@
   font-family: 'PT Root UI Bold';
   color: '#4965F0';
   margin-left: 5px;
+  text-decoration: none;
 }
 
 .nounHolderInfoContainer {
