--- a/packages/nouns-webapp/src/components/AuctionActivity/BidHistory.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivity/BidHistory.module.css
@@ -8,51 +8,66 @@
   list-style-type: none;
   row-gap: 0.5rem;
   padding: 0;
+  margin-bottom: 8px;
 }
 
 .bidRow {
   background-color: var(--brand-cool-accent);
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 10px;
   border-bottom: 1px solid rgba(211, 211, 211, 0.322);
   font-size: 0.9rem;
   font-weight: 600;
+  transition: all 0.2s ease-in-out;
 }
+
+.bidRow:hover {
+  filter: brightness(102%);
+}
+
 .bidItem {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .leftSectionWrapper {
   display: flex;
   flex-direction: column;
 }
-.bidder {
+
+.bidder > div > div {
   color: var(--brand-cool-dark-text);
   font-family: 'PT Root UI Bold';
+  font-size: 18px;
 }
 
 .bidDate {
   display: none;
   color: gray;
 }
+
 .rightSectionWrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
+
 .bidAmount {
   color: var(--brand-cool-dark-text);
   font-family: 'PT Root UI Bold';
   margin-right: 1rem;
+  font-size: 18px;
+  padding-top: 2px;
 }
-.linkSymbol,
-.linkSymbol a {
+
+.linkSymbol {
   color: var(--brand-cool-light-text);
 }
-.linkSymbol a:hover {
-  color: var(--brand-gray-hover);
+
+.linkSymbol:hover {
+  color: var(--brand-cool-dark-text);
 }
 
 @media (max-width: 992px) {
