--- a/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
+++ b/packages/nouns-webapp/src/components/AuctionActivityNounTitle/AuctionActivityNounTitle.module.css
@@ -1,30 +1,11 @@
-.nounTitle {
-  color: black;
-}
-
-.nounTitle a:link {
-  color: black;
-}
-
-.nounTitle a:visited {
-  color: black;
-}
-
-.nounTitle a:hover {
-  color: black;
-}
-
-.nounTitle:active {
-  color: black;
-}
-
 .wrapper {
   display: inline-block;
 }
 
 .wrapper h1 {
   font-family: 'Londrina Solid';
-  font-size: 72pt;
+  font-size: 54pt;
+  margin-bottom: 0px;
 }
 
 @media (max-width: 992px) {
