--- a/packages/nouns-webapp/src/components/ProfileActivityFeed/ProfileActivityFeed.module.css
+++ b/packages/nouns-webapp/src/components/ProfileActivityFeed/ProfileActivityFeed.module.css
@@ -33,8 +33,15 @@
   margin-bottom: 0rem;
 }
 
+.aboveTheFoldEventsTable td {
+  border-top: 1px solid rgba(0,0,0,0.1);
+  padding-top: 12px;
+  border-bottom: none !important;
+}
+
 .nullStateCopy {
   opacity: 50%;
   margin-left: 1rem;
-  font-family: 'PT Root UI';
+  font-family: 'PT Root UI Medium';
+  font-size: 18px;
 }
