--- a/packages/nouns-webapp/src/css/colors.css
+++ b/packages/nouns-webapp/src/css/colors.css
@@ -8,12 +8,16 @@
   --brand-cool-dark-text: #151c3b;
   --brand-cool-light-text: #79809c;
   --brand-cool-accent: #e9ebf3;
+  --brand-warm-background: #d5d7e0;
+  --brand-warm-dark-text: #221B1A;
+  --brand-warm-light-text: #8f7e7c;
+  --brand-warm-accent: #F9F1F1;
   --brand-gray-dark-text: #14161b;
   --brand-gray-border: #e2e3eb;
   --brand-gray-background: #f4f4f8;
   --brand-gray-light-text: #8c8d92;
   --brand-gray-hover: #fafafb;
-  --brand-color-red: #d63c5e;
+  --brand-color-red: #D63C5E;
   --brand-color-blue: #4965f0;
   --brand-color-green: #43b369;
   --brand-color-red-translucent: rgba(214, 60, 94, 0.1);
