add state responsive submit vote btn

--- a/packages/nouns-webapp/src/pages/Vote/Vote.module.css
+++ b/packages/nouns-webapp/src/pages/Vote/Vote.module.css
@@ -172,3 +172,43 @@
  font-size: 18px;
  font-family: 'PT Root UI Bold';
 }
+
+.connectWalletText {
+ color: var(--brand-gray-light-text);
+ font-family: 'PT Root UI Bold';
+ font-size: 16px;
+}
+
+.submitBtn {
+  width: 100%;
+  max-width: 8rem;
+  height: 3rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  border-radius: 12px;
+  background-color: var(--brand-dark-red);
+  border: var(--brand-dark-red);
+}
+.submitBtn:focus,
+.submitBtn:hover {
+  background-color: var(--brand-dark-red) !important;
+  box-shadow: 0 0 0 0.2rem rgb(214, 60, 94, 0.75);
+}
+.submitBtn:active {
+  background-color: var(--brand-dark-red) !important;
+}
+.submitBtnDisabled {
+    background-color: var(--brand-gray-light-text) !important;
+    width: 100%;
+    max-width: 8rem;
+    height: 3rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    border-radius: 12px;
+    border: var(--brand-dark-red);
+    opacity: 50%;
+}
+
+.submitBtnDisabled:hover {
+    cursor: not-allowed;
+}
