--- a/packages/nouns-webapp/src/components/Winner/Winner.module.css
+++ b/packages/nouns-webapp/src/components/Winner/Winner.module.css
@@ -41,8 +41,12 @@
   }
 
   .wrapper {
-    padding-left: 0.5rem;
-    padding-right: 2rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 6px;
+    margin-top: 12px;
   }
 
   .leftCol {
