--- a/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
+++ b/packages/nouns-webapp/src/components/NavBarButton/NavBarButton.module.css
@@ -3,7 +3,9 @@
     border-radius: 10px;
     font-size: 16px;
     font-family: 'PT Root UI Bold';
-    padding: 0px 12px 0px 8px;
+    padding: 0px 10px 0px 12px;
+    transition: all 0.125s ease-in-out;
+    box-shadow: none;
 }
 
 .button {
@@ -40,7 +42,7 @@
 }
 
 .coolWallet:hover {
-    background-color: rgba(73, 101, 240, 0.1);
+    filter: brightness(110%);
 }
 
 .warnInfo {
@@ -60,12 +62,12 @@
 }
 
 .warmWallet:hover {
-    background-color: rgba(214, 60, 94, 0.1);
+    filter: brightness(110%);
 }
 
 .whiteInfo {
     background-color: white;
-    border: 1px solid #E2E3E8;
+    box-shadow: 0px 0px 0px 1px #E2E3E8;
     color: #79809C
 }
 
@@ -75,7 +77,7 @@
 
 .whiteActive {
     background-color: #F4F4F8;
-    border: 1px solid #E2E3E8;
+    box-shadow: 0px 0px 0px 1px #E2E3E8;
     color: black;
 }
 
@@ -83,4 +85,10 @@
     color: #D63C5E; 
 }
 
-
+@media (max-width: 992px) {
+    .wrapper, .button {
+       height: 48px;
+       font-size: 18px;
+   }
+}
+  
